@@ -1,5 +1,6 @@
 set (PROGRAMFILES "")
 foreach (FILE dbt2-pgsql-build-db
+              dbt2-pgsql-drop-stored-procs
               dbt2-pgsql-load-db
         )
     configure_file(${FILE}.in ${CMAKE_BINARY_DIR}/${FILE} @ONLY)
